<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="18dp"
        android:text="@string/tickets_vault"
        android:textAlignment="center"
        android:textSize="42sp"
        app:layout_constraintBottom_toTopOf="@+id/edtTickets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="Taxi Fare App" />

    <EditText
        android:id="@+id/edtTickets"
        android:layout_width="331dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="19dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/number_of_tickets"
        android:inputType="numberDecimal"
        android:text="@string/distance_in_kms"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spnGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <Spinner
        android:id="@+id/spnGroup"
        android:layout_width="225dp"
        android:layout_height="28dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="24dp"
        android:entries="@array/ticktsgroup"
        android:scrollbarSize="15dp"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnFindCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTickets" />

    <Button
        android:id="@+id/btnFindCost"
        android:layout_width="258dp"
        android:layout_height="54dp"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="77dp"
        android:width="50dp"
        android:minWidth="100dp"
        android:text="@string/txtbutton"
        app:layout_constraintBottom_toTopOf="@+id/txtResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnGroup"
        tools:text="CALCULATE YOUR FARE" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/initial_fee_3_00"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFindCost"
        tools:text="Initial fee for $3.00"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="195dp"
        android:layout_height="160dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/a" />

</androidx.constraintlayout.widget.ConstraintLayout>